--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,13 @@
 <html itemscope itemtype="http://schema.org/Map" prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb#">
 <head>
     <meta charset="utf-8"/>
-    <title>earth :: an animated map of global wind and weather</title>
+    <title>GIA_earth :: all ice histories and earth rheology reconstruction</title>
     <meta itemprop="name"                                      content="earth"/>
     <meta itemprop="description"     name="description"        content="an animated map of global wind and weather"/>
     <meta itemprop="author"          name="author"             content="Cameron Beccario"/>
 
     <meta property="og:type"        content="website"/>
-    <meta property="og:title"       content="earth"/>
+    <meta property="og:title"       content="GIA_earth"/>
     <meta property="og:description" content="An animated map of global wind and weather. Visit the community at https://www.facebook.com/EarthWindMap"/>
     <meta property="og:url"         content="http://earth.nullschool.net"/>
     <meta property="og:image"       content="http://earth.nullschool.net/preview.jpg"/>
@@ -55,7 +55,7 @@
         </div>
 
         <p id="earth">
-            <span id="show-menu" class="text-button" title="menu">earth</span>
+            <span id="show-menu" class="text-button" title="menu">GIA_earth</span>
             <span id="progress" class="invisible"></span>
         </p>
 
