modified the readme a bit

--- a/public/about.html
+++ b/public/about.html
@@ -13,16 +13,11 @@
 
     <div id="about">
         <div>
-            <a href="./" class="internal-link"><img id="cover" src="/cover.jpg"/></a>
+            <a href="./" class="internal-link"><img id="cover" src="/image.png"/></a>
         </div>
-        <h1><a href="./" class="internal-link">earth</a></h1>
+        <h1><a href="./" class="internal-link">GIA_earth</a></h1>
         <div class="blurb">
-            <p class="center">a visualization of global weather conditions</p>
-            <p class="center">forecast by supercomputers</p>
-            <p class="center">updated every three hours</p>
-            <p class="center">&nbsp;</p>
-            <p class="center">ocean surface current estimates</p>
-            <p class="center">updated every five days</p>
+            <p class="center">Need to edit ------</p>
         </div>
         <div>
             <p class="left">Community |</p>
