Finally a working GIA with RSL json

--- a/public/index.html
+++ b/public/index.html
@@ -77,8 +77,10 @@
                 class="text-button" id="option-show-grid" title="Toggle Grid">Grid</span>
             </p>
             <p>Mode | <span
-                class="text-button" id="wind-mode-enable">Air</span> – <span
-                class="text-button" id="ocean-mode-enable">Ocean</span>
+                class="text-button" id="relief-mode-enable">Relief</span> – <span
+                class="text-button" id="gia-mode-enable">GIA</span> – <span
+                class="text-button" id="wind-mode-enable">wind</span> – <span
+                class="text-button" id="ocean-mode-enable">ocean</span>
             </p>
             <p class="wind-mode">Height | <span
                 class="surface text-button" id="surface-level" title="Surface">Sfc</span> – <span
@@ -103,9 +105,13 @@
                 class="text-button" id="overlay-total_cloud_water" title="Total Cloud Water">TCW</span> – <span
                 class="text-button" id="overlay-mean_sea_level_pressure" title="Mean Sea Level Pressure">MSLP</span>
             </p>
-            <p class="ocean-mode invisible">Animate | <span
-                class="text-button" id="animate-currents" title="Currents">Currents</span>
+
+            <p class="gia-mode invisible">Overlay | <span
+                class="text-button" id="overlay-gia-off">None</span> – <span
+                class="text-button" id="overlay-gia" title="GIA">GIA</span>
             </p>
+            <p class="gia-mode invisible"><span style="visibility:hidden">Overlay</span> |</p>
+
             <p class="ocean-mode invisible">Overlay | <span
                 class="text-button" id="overlay-ocean-off">None</span> – <span
                 class="text-button" id="overlay-currents" title="Currents">Currents</span>
