Update and comment out the wind and ocean mode

--- a/public/index.html
+++ b/public/index.html
@@ -78,11 +78,12 @@
             </p>
             <p>Mode | <span
                 class="text-button" id="relief-mode-enable">Relief</span> – <span
-                class="text-button" id="gia-mode-enable">GIA</span> – <span
+                class="text-button" id="gia-mode-enable">GIA</span> 
+                <!-- – <span
                 class="text-button" id="wind-mode-enable">wind</span> – <span
-                class="text-button" id="ocean-mode-enable">ocean</span>
+                class="text-button" id="ocean-mode-enable">ocean</span> -->
             </p>
-            <p class="wind-mode">Height | <span
+            <!-- <p class="wind-mode">Height | <span
                 class="surface text-button" id="surface-level" title="Surface">Sfc</span> – <span
                 class="surface text-button" id="isobaric-1000hPa">1000</span> – <span
                 class="surface text-button" id="isobaric-850hPa">850</span> – <span
@@ -91,8 +92,8 @@
                 class="surface text-button" id="isobaric-250hPa">250</span> – <span
                 class="surface text-button" id="isobaric-70hPa">70</span> – <span
                 class="surface text-button" id="isobaric-10hPa">10</span> hPa
-            </p>
-            <p class="wind-mode">Overlay | <span
+            </p> -->
+            <!-- <p class="wind-mode">Overlay | <span
                 class="text-button" id="overlay-off">None</span> – <span
                 class="text-button" id="overlay-wind" title="Wind Speed">Wind</span> – <span
                 class="text-button" id="overlay-temp" title="Temperature">Temp</span> – <span
@@ -104,7 +105,7 @@
                 class="text-button" id="overlay-total_precipitable_water" title="Total Precipitable Water">TPW</span> – <span
                 class="text-button" id="overlay-total_cloud_water" title="Total Cloud Water">TCW</span> – <span
                 class="text-button" id="overlay-mean_sea_level_pressure" title="Mean Sea Level Pressure">MSLP</span>
-            </p>
+            </p> -->
 
             <p class="gia-mode invisible">Overlay | <span
                 class="text-button" id="overlay-gia-off">None</span> – <span
@@ -116,7 +117,7 @@
                 class="text-button" id="overlay-ocean-off">None</span> – <span
                 class="text-button" id="overlay-currents" title="Currents">Currents</span>
             </p>
-            <p class="ocean-mode invisible"><span style="visibility:hidden">Overlay</span> |</p>
+            <!-- <p class="ocean-mode invisible"><span style="visibility:hidden">Overlay</span> |</p>
             <p>Projection | <span
                 class="proj text-button" id="atlantis" title="Atlantis">A</span> – <span
                 class="proj text-button" id="azimuthal_equidistant" title="Azimuthal Equidistant">AE</span> – <span
@@ -126,7 +127,7 @@
                 class="proj text-button" id="stereographic" title="Stereographic">S</span> – <span
                 class="proj text-button" id="waterman" title="Waterman Butterfly">WB</span> – <span
                 class="proj text-button" id="winkel3" title="Winkel Tripel">W3</span>
-            </p>
+            </p> -->
             <!--<p>免責事項 | 正確な情報を提供するためのものではありません</p>-->
             <p id="lang"><a href="/jp" class="internal-link">日本語</a></p>
             <p>
