feat: navigation between gia files with increments of 250y or 1000y
also made "now" appear as "0 years ago". not sure if this is the right way
to do it though

--- a/public/index.html
+++ b/public/index.html
@@ -60,25 +60,20 @@
         </p>
 
         <div id="menu" class="invisible">
-            <p>Date | <span
-                id="data-date" class="local"></span> <span
-                id="toggle-zone" class="text-button"></span>
+            <p>Date | <span id="data-date" class="local"></span> <span id="toggle-zone" class="text-button"></span>
             </p>
             <p>Data | <span id="data-layer"></span></p>
             <p><span id="scale-label">Scale | </span><canvas id="scale"></canvas></p>
             <p>Source | <span id="data-center"></span></p>
-            <p>Control | <span
-                class="text-button" id="nav-now" title="Current Conditions">Now</span><span
-                class="text-button" id="nav-backward-more"> « </span> – <span
-                class="text-button" id="nav-backward"> ‹ </span> – <span
-                class="text-button" id="nav-forward"> › </span> – <span
-                class="text-button" id="nav-forward-more"> » </span><span
-                class="text-button" id="show-location" title="Current Position">〖◯〗</span><span
-                class="text-button" id="option-show-grid" title="Toggle Grid">Grid</span>
+            <p>Control | <span class="text-button" id="nav-now" title="Current Conditions">Now</span><span
+                    class="text-button" id="nav-backward-more"> « </span> – <span class="text-button" id="nav-backward">
+                    ‹ </span> – <span class="text-button" id="nav-forward"> › </span> – <span class="text-button"
+                    id="nav-forward-more"> » </span><span class="text-button" id="show-location"
+                    title="Current Position">〖◯〗</span><span class="text-button" id="option-show-grid"
+                    title="Toggle Grid">Grid</span>
             </p>
-            <p>Mode | <span
-                class="text-button" id="relief-mode-enable">Relief</span> – <span
-                class="text-button" id="gia-mode-enable">GIA</span> 
+            <p>Mode | <span class="text-button" id="relief-mode-enable">Relief</span> – <span class="text-button"
+                    id="gia-mode-enable">GIA</span>
                 <!-- – <span
                 class="text-button" id="wind-mode-enable">wind</span> – <span
                 class="text-button" id="ocean-mode-enable">ocean</span> -->
@@ -107,11 +102,10 @@
                 class="text-button" id="overlay-mean_sea_level_pressure" title="Mean Sea Level Pressure">MSLP</span>
             </p> -->
 
-            <p class="gia-mode invisible">Overlay | <span
-                class="text-button" id="overlay-gia-off">None</span> – <span
-                class="text-button" id="overlay-gia" title="GIA">GIA</span>
+            <p class="gia-mode invisible">Overlay | <span class="text-button" id="overlay-gia-off">None</span> – <span
+                    class="text-button" id="overlay-gia" title="GIA">GIA</span>
             </p>
-            <p class="gia-mode invisible"><span style="visibility:hidden">Overlay</span> |</p>
+            <!-- <p class="gia-mode invisible"><span style="visibility:hidden">Overlay</span> |</p> -->
 
             <p class="ocean-mode invisible">Overlay | <span
                 class="text-button" id="overlay-ocean-off">None</span> – <span
@@ -138,10 +132,10 @@
         </div>
     </div>
 
-    <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js" charset="utf-8"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js" charset="utf-8"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.0/backbone-min.js" charset="utf-8"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/topojson/1.1.0/topojson.min.js" charset="utf-8"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.3.10/d3.min.js" charset="utf-8"></script> -->
+    <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.3.10/d3.min.js" charset="utf-8"></script>
 
 
     <script src="/libs/underscore.js/1.6.0/underscore.js" charset="utf-8"></script>
